--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-# REACT_APP_API=https://mayavi-fashion-o22mfb2qda-em.a.run.app/api/v1
-REACT_APP_API=https://e-commerce-backend-1-s32t.onrender.com/api/v1
+REACT_APP_API=https://mayavi-fashion-1-o22mfb2qda-em.a.run.app/api/v1
