--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_API=https://e-commerce-backend-op5n.onrender.com/api/v1
+REACT_APP_API=https://mayavi-fashion-backend-o22mfb2qda-em.a.run.app/api/v1
